# shim

./: .gitignore  .gitleaks.toml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.coding-hermes/: tasks.md
.github/workflows/: sync-protocol.yml  test.yml
.gitreins/: config.yaml
.vfs/: manifest.yaml
.vfs/graph/: edges.jsonl
scripts/: sync_protocol.py
src/h3_shim/: __init__.py  cli.py  client.py  loader.py  native.py  protocol.py  shim_loop.py  test_battery.py  upgrade_check.py
src/h3_shim/templates/go/: go.mod  main.go
src/h3_shim/templates/py/: main.py  pyproject.toml  requirements.txt
src/h3_shim/templates/ts/: index.ts  package.json  tsconfig.json
tests/: __init__.py  test_cli.py  test_client.py  test_loader.py  test_protocol.py  test_shim_loop.py  test_upgrade_check.py
