[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-h3-shim"
version = "0.1.0"
description = "H3 protocol shim for Hermes Core — client, loop, test battery, CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Total Windup Flight Systems"}
]
keywords = ["h3", "hermes", "shim", "protocol", "test-battery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "pydantic>=2.0",
    "httpx>=0.26",
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[project.scripts]
h3-test = "h3_shim.cli:main"
hermes-h3 = "h3_shim.cli:hermes_h3"

[tool.hatch.build.targets.wheel]
packages = ["src/h3_shim"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx2>=2.7.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
]
